--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -73,6 +73,12 @@
     <Filter Include="ヘッダーファイル\postEffect">
       <UniqueIdentifier>{25fc5caf-7be8-4399-89f0-15cfc53c8fc0}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソースファイル\json">
+      <UniqueIdentifier>{761a39b0-1468-47cc-8004-04493e9787fb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダーファイル\json">
+      <UniqueIdentifier>{cbabccf8-ca0a-4ac2-9f8d-01996c29363f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="imgui\imgui.cpp">
@@ -194,6 +200,9 @@
     </ClCompile>
     <ClCompile Include="Code\3d\Mapchip.cpp">
       <Filter>ソースファイル\3d</Filter>
+    </ClCompile>
+    <ClCompile Include="Code\json\LevelLoader.cpp">
+      <Filter>ソースファイル\json</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -319,6 +328,9 @@
     </ClInclude>
     <ClInclude Include="Code\3d\Mapchip.h">
       <Filter>ヘッダーファイル\3d</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\json\LevelLoader.h">
+      <Filter>ヘッダーファイル\json</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
