--- a/DirectXGame/DirectXGame.vcxproj
+++ b/DirectXGame/DirectXGame.vcxproj
@@ -120,6 +120,7 @@
     <ClCompile Include="Code\scene\GameScene.cpp" />
     <ClCompile Include="Code\scene\TitleScene.cpp" />
     <ClCompile Include="Code\win\DirectXCommon.cpp" />
+    <ClCompile Include="Code\win\Framework.cpp" />
     <ClCompile Include="Code\win\main.cpp" />
     <ClCompile Include="Code\win\MyGame.cpp" />
     <ClCompile Include="Code\win\WinApp.cpp" />
@@ -152,6 +153,7 @@
     <ClInclude Include="Code\scene\GameScene.h" />
     <ClInclude Include="Code\scene\TitleScene.h" />
     <ClInclude Include="Code\win\DirectXCommon.h" />
+    <ClInclude Include="Code\win\Framework.h" />
     <ClInclude Include="Code\win\MyGame.h" />
     <ClInclude Include="Code\win\SafeDelete.h" />
     <ClInclude Include="Code\win\WinApp.h" />
